--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "facefusion_comfyui"
 description = "Facefusion ComfyUI - Unofficial"
-version = "1.1.2"
+version = "1.2.1"
 license = {file = "LICENSE"} 
 # classifiers = [
 #     # For OS-independent nodes (works on all operating systems)
@@ -20,7 +20,7 @@ license = {file = "LICENSE"}
 #     "Environment :: GPU :: Apple Metal",    # Apple Metal support
 # ]
 
-dependencies = ["httpx", "httpx-retries", "opencv-python", "onnxruntime"]
+dependencies = ["httpx", "httpx-retries", "opencv-python", "onnx", "onnxruntime-gpu"]
 
 [project.urls]
 Repository = "https://github.com/huygiatrng/Facefusion_comfyui"
